--- a/Suggestions.html
+++ b/Suggestions.html
@@ -45,7 +45,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
-      <a href="Suggestions.html">Suggestions</a>
+      <a href="suggestions.html">Suggestions</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
